# iced_image_gallery

./: .gitignore  Cargo.toml
src/: gallery.rs  image_data.rs  main.rs
src/components/: preview.rs  viewer.rs
src/core/: helper.rs  image_data.rs  mod.rs
src/ui/: mod.rs
src/ui/gallery/: mod.rs
src/ui/gallery/components/: mod.rs  preview.rs  viewer.rs
