[package]
name = "iced_image_gallery"
version = "0.1.0"
authors = ["Amit Sheokand <amix.sheokand@gmail.com>"]
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "4b075b9731f4658a885357024cc77dee10e223c3", features = [
     "tokio", "image"
]}

bytes = "1.10.1"
image = "0.25.6"
tokio = "1.39.0"